[project]
name = "mew"
readme="README.md"
version = "3.0.0"
description = "Just a small test project"

requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.1",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
mew = "mew.__main__:main"
